b2c/sfsc/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CC_Username__c</fullName>
        <description>This field holds commerce cloud username</description>
        <inlineHelpText>This field holds commerce cloud username</inlineHelpText>
        <label>CC Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</description>
        <inlineHelpText>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</inlineHelpText>
        <label>Contact SCC Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Synchronised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Auth_Status__c</fullName>
        <label>Customer Auth Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>guest</fullName>
                </value>
                <value>
                    <fullName>registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_SFCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds value if Contact is created from Salesforce Commerce Cloud or not.</description>
        <inlineHelpText>This field holds value if Contact is created from Salesforce Commerce Cloud or not.</inlineHelpText>
        <label>From SFCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCCLanguages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Customer ID.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Customer ID.</inlineHelpText>
        <label>SFCC Customer Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Number__c</fullName>
        <description>This field holds Salesforce Commerce Cloud customer number.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud customer number.</inlineHelpText>
        <label>SFCC Customer Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>